tests/bad/static_member_invalid_struct.ae
/// fail: Unknown struct with this name

def main() {
    Bar::foo()
}